--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,13 @@
   "name": "fintech",
   "type": "module",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
-    "rss-parser": "^3.13.0",
-    "telegraf": "^4.16.3",
-    "axios": "^1.6.2",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "node-fetch": "^3.3.2",
-    "fs-extra": "^11.1.1"
+    "rss-parser": "^3.13.0",
+    "telegraf": "^4.16.3"
   }
 }
